# ghc-ci

./: cabal.project  circlehs.nix  default.nix  ghc-ci.cabal  ghc-ci.nix  module.nix
server/: CircleCI.hs  Config.hs  Git.hs  Main.hs
src/: API.hs  Types.hs
