name:                ghc-ci
version:             0.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alp@well-typed.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     API, Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.12,
                       servant,
                       aeson,
                       circlehs,
                       http-api-data,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable ghc-ci-server
  main-is:             Main.hs
  other-modules:       Config, CircleCI, Git
  -- other-extensions:
  build-depends:       base >=4.9 && <4.12,
                       aeson,
                       circlehs,
                       directory,
                       filepath,
                       ghc-ci,
                       mtl,
                       optparse-applicative,
                       process,
                       servant-client,
                       servant-server,
                       temporary,
                       text,
                       transformers,
                       unordered-containers,
                       wai,
                       warp
  hs-source-dirs:      server
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
